Turned on PMD checking is test hierarchy and fixed resulting PMD errors. Fixed CPD (copy paste detector) errors flagged in test hierarchy.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14053 a8845c50-7012-0410-95d3-8e1449b9b1e4